slight change to values of bottom row headers and margin values on bottom row card images to attempt fix to allignment issue visible in deployed page though not in inspect.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -327,19 +327,19 @@ figcaption {
     }
     
     #bottom-left-card-header {
-        margin: 20px 0px 0px 8px;
+        margin: 15px 0px 0px 10px;
         width: 100px;    
     }
     
     #bottom-right-card-header {
-        margin: 20px 0px 0px 8px;
+        margin: 15px 0px 0px 10px;
         width: 100px;   
     }
     
     .bottom-row-card img {
         width: 236px;
         height: 200px;
-        margin: 0px 10px 0px 8px; 
+        margin: 0px 10px 0px 10px; 
     }
 
     #contact-links li a {
